--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
+    "event-stream": "^3.3.3",
     "gulp": "^3.9.1",
+    "gulp-less": "^3.1.0",
     "gulp-pug": "^3.0.3",
+    "less": "^2.7.1",
     "pug": "^2.0.0-beta3"
   }
 }
