--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
     "gulp-pug": "^3.0.3",
     "less": "^2.7.1",
     "pug": "^2.0.0-beta3"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "multer": "^1.1.0"
   }
 }
