--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "meanit",
+  "version": "0.0.0",
+  "private": true,
   "devDependencies": {
     "event-stream": "^3.3.3",
     "gulp": "^3.9.1",
@@ -10,7 +13,11 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "debug": "~2.2.0",
     "express": "^4.14.0",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "less-middleware": "1.0.x",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
