--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "express": "^4.14.0",
+    "express-jwt": "^3.4.0",
+    "jsonwebtoken": "^7.1.6",
     "less-middleware": "1.0.x",
     "mongoose": "^4.5.7",
     "morgan": "~1.7.0",
     "multer": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
